syntax = "proto3";

package pb;

import "movie.proto";

option go_package = "github.com/CineDeepMatch/Backend-server/pb";

// Get Movie
message GetMovieRequest {
    string movie_id = 1;
}

message GetMovieResponse {
    Movie movie = 1;
}

// Get Many Movies
message GetManyMoviesRequest {
    int64 page_size = 1;
    int64 page_number = 2;
}

message GetManyMoviesResponse {
    repeated Movie movies = 1;
}

